--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,3 +1,10 @@
 body {
     background-color: azure;
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
