--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>Welcome to Software Design</h1>
+        <h1>Vertical Tank Maintenance</h1>
         <hr>
         <br>
         <br>
@@ -17,5 +17,7 @@
         {% endblock %}
     
     </div>
+    
 </body>
+<footer>&#169;VTM 2020</footer>
 </html>
