--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block title %} Welcome to the home page {% endblock %}
+{% block title %} VTM Site {% endblock %}
 
 {% block body %} Hello world! {% endblock %}
