Second commit of HW11
Finally got the output to work

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,21 @@
 
 {% block title %} VTM Site {% endblock %}
 
-{% block body %} Hello world! {% endblock %}
+{% block body %}
+<img src="img/above_ground_vertical_tanks.jpg" alt="Tanks" class="responsive">
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dignissim nisi vel porta ornare. Aliquam scelerisque, odio varius venenatis tempus, sapien ante condimentum quam, nec bibendum mi velit sed ipsum. Donec volutpat at lectus at vulputate. Integer iaculis dui quis aliquam feugiat. Quisque posuere odio ex, a scelerisque tortor dignissim nec. In magna magna, pellentesque tincidunt mollis sed, porta id dui. Donec vel tortor eget ex eleifend faucibus. Sed at pellentesque est, a rhoncus sapien. Duis eget tristique diam, ac dignissim eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan diam diam, eget eleifend ante interdum porta. Donec nec lobortis magna, ut ullamcorper quam.
+
+Pellentesque quis sagittis lacus. Donec condimentum maximus tempor. Duis vehicula tempus porttitor. Integer eu felis ex. Mauris viverra metus feugiat libero vestibulum, vel facilisis justo feugiat. Duis id odio at magna tempus molestie id id tellus. Morbi et nulla posuere, eleifend ipsum in, eleifend risus.
+
+Nullam eu justo felis. Mauris porta volutpat ex, in feugiat magna. Donec porttitor purus sem, vel porttitor odio ullamcorper eu. Suspendisse nec leo vel leo tempor vehicula vel sed quam. Vestibulum mauris eros, malesuada consequat mi tristique, consectetur ultricies eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet eget ligula non convallis. Suspendisse nibh diam, imperdiet sed ultricies sit amet, pellentesque et felis. Maecenas at metus eu augue pretium suscipit. Maecenas non diam convallis, rhoncus lorem ut, eleifend mauris.
+
+Sed tristique augue vel dui elementum porta. In in eleifend justo. Ut interdum accumsan ante, a viverra massa pellentesque sed. Vestibulum faucibus, libero vel congue lobortis, ante felis maximus nulla, eu laoreet ex turpis malesuada ipsum. Proin et metus turpis. Maecenas vitae augue vitae tellus convallis cursus. Sed at suscipit dolor. Nullam tempus dui nibh, in porta augue consectetur a. Donec mattis urna in tempor porttitor. Pellentesque id euismod urna. Donec non commodo massa. Curabitur posuere arcu ut congue egestas. Sed lacus mi, pretium a lacus sed, semper dapibus mauris.
+
+Maecenas vitae posuere nisl. Proin mollis imperdiet ex non egestas. Fusce vel suscipit lacus. Aenean cursus tempor odio eu fermentum. In ultricies eros mauris, et lacinia lorem pretium nec. Nunc id leo a neque tincidunt maximus eget in metus. Donec sollicitudin nisl elit, ac sodales diam auctor sit amet. Morbi malesuada commodo dui, vel dictum urna. Aenean facilisis velit justo, non sagittis erat porttitor id. Proin sapien ipsum, tincidunt ac mattis id, semper in velit. Praesent cursus mauris lobortis maximus iaculis. Ut fringilla dapibus viverra. In tincidunt risus eget ipsum pharetra, non pulvinar neque vestibulum. Etiam ac ultrices ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus justo nibh, vestibulum et ligula eget, dictum dapibus enim.
+</p>
+
+
+
+{% endblock %}
