--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -1,5 +1,26 @@
 {% extends 'base.html' %}
 
-{% block title %} Welcome to Hoang's Page {% endblock %}
+{% block title %} Estimates {% endblock %}
 
-{% block body %} It's Hoang! {% endblock %}
+{% block body %} 
+
+<form method="POST" action="/TotalPrice" id="calculate">
+
+    <label for="radius">Radius:</label><br>
+    <input type="number" id="radius" name="radius"><br>
+<br>
+    <label for="height">Height:</label><br>
+    <input type="number" id="height" name="height"><br>
+ <br> 
+
+ <input type="submit" value="Submit">
+
+</form>
+
+<br><br>
+
+{% if TotalPrice %}
+    <p>Your total price is: {{TotalPrice}}</p>
+{% endif%}
+
+{% endblock %}
