Fourth commit to HW11
Properly formatted the output

--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -20,7 +20,7 @@
 <br><br>
 
 {% if TotalPrice %}
-    <p>Your total price is: ${{TotalPrice}}</p>
+    <p>Your total price is: {{TotalPrice}}</p>
 {% endif%}
 
 {% endblock %}
