--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %} VTM Site {% endblock %}
 
 {% block body %}
-<img src="vtm_site/img/above_ground_vertical_tanks.jpg" alt="Tanks" class="responsive"/>
+<img src="{{ url_for('static', filename='img/above_ground_vertical_tanks.jpg') }}" alt="Tanks" class="responsive"/>
 
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dignissim nisi vel porta ornare. Aliquam scelerisque, odio varius venenatis tempus, sapien ante condimentum quam, nec bibendum mi velit sed ipsum. Donec volutpat at lectus at vulputate. Integer iaculis dui quis aliquam feugiat. Quisque posuere odio ex, a scelerisque tortor dignissim nec. In magna magna, pellentesque tincidunt mollis sed, porta id dui. Donec vel tortor eget ex eleifend faucibus. Sed at pellentesque est, a rhoncus sapien. Duis eget tristique diam, ac dignissim eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan diam diam, eget eleifend ante interdum porta. Donec nec lobortis magna, ut ullamcorper quam.
