--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -13,7 +13,7 @@
     <input type="number" id="height" name="height"><br>
  <br> 
 
- <input type="submit" value="Submit">
+ <input type="submit" class="btn btn-dark" value="Submit">
 
 </form>
 
